-------------------------------------------------------------------------------

Besides several small improvements and bugfixes, the new Extreme Tux Racer
version 0.9 features the following changes:


Version 0.8.2                                                 ??th of ???, 202?
-------------------------------------------------------------------------------
- Appdata/Metainfo file is now installed to <prefix>/share/metainfo, like
  current specification requires
- Fixed Windows build when UNICODE not defined
- etr.png icon regenerated from the etr.svg in 64x64 size for better quality
- Updated translations
  - Swedish


Version 0.8.1                                                 25th of Jun, 2021
-------------------------------------------------------------------------------
- Autotools build now prefers linking against libOpenGL over libGL
- New translations
  - Esperanto
  - Dutch
  - Romanian
- Updated translations
  - French
  - Swedish


Version 0.8                                                    7th of Mar, 2020
-------------------------------------------------------------------------------

Besides several small improvements and bugfixes, the new Extreme Tux Racer
version 0.8 features the following changes:

- Extreme Tux Racer now compiles with clang++
- Minimum SFML version is now 2.4
- Autotools based build method can use opengl32 & glu32 instead of libGL & libGLU
- New translations
  - Swedish


Version 0.7.5                                               27th of April, 2018
-------------------------------------------------------------------------------
Bugfix release

- Fixed a crash when score is not good enough to enter high score list
- Extreme Tux Racer comes with AppStream metadata


Version 0.7.4                                             27th of October, 2016
-------------------------------------------------------------------------------
Bugfix release

- Fixed infinite loop when window resize event has been received to size